Reselect on translator and fix reselect on fillgap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,6 +253,7 @@ body {
 }
 
 .form-inline .input-group {
-	margin-top: 5px;
-	margin-bottom: 10px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	padding: 5px;
 }
